# Rendering-Engine

./: .clang-format  .gitmodules  CMakeLists.txt  build.bat  build.sh  conanfile.txt
Jnrlib/: CMakeLists.txt
Jnrlib/include/: BoundingBox.h  CountParameters.h  Exceptions.h  FileHelpers.h  JnrSerializer.h  Jnrlib.h  MathHelpers.h  Pool.h  RandomHelpers.h  Singletone.h  ThreadPool.h  TypeHelpers.h  TypeMatching.h
Jnrlib/src/: BoundingBox.cpp  FileHelpers.cpp  JnrSerializer.cpp  RandomHelpers.cpp  ThreadPool.cpp  TypeHelpers.cpp  TypeMatching.cpp
Renderer/: CMakeLists.txt
Renderer/src/: main.cpp
Renderer/src/Common/: BufferDumper.cpp  BufferDumper.h  CameraUtils.cpp  CameraUtils.h  Constants.h  EditorCamera.cpp  EditorCamera.h  GeometryHelpers.cpp  GeometryHelpers.h  HitPoint.cpp  HitPoint.h  IDumper.h  MaterialManager.cpp  MaterialManager.h  PngDumper.cpp  PngDumper.h  Primitive.h  Ray.cpp  Ray.h  Sphere.cpp  Sphere.h  Vertex.h  VulkanHelpers.h
Renderer/src/Common/CreateInfo/: CameraCreateInfo.cpp  CameraCreateInfo.h  MaterialCreateInfo.cpp  RayTracingCreateInfo.cpp  RayTracingCreateInfo.h  RendererCreateInfo.cpp  RendererCreateInfo.h  SceneCreateInfo.cpp  SceneCreateInfo.h  VulkanRendererCreateInfo.cpp  VulkanRendererCreateInfo.h
Renderer/src/Common/Helpers/: BatchRenderer.cpp  BatchRenderer.h
Renderer/src/Common/Material/: Dielectric.cpp  Dielectric.h  Lambertian.cpp  Lambertian.h  Material.cpp  Material.h  Metal.cpp  Metal.h
Renderer/src/Common/Scene/: Camera.cpp  Camera.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneParser.cpp  SceneParser.h
Renderer/src/Common/Scene/Accelerators/: Accelerator.h  BVH.cpp  BVH.h
Renderer/src/Common/Scene/Components/: AccelerationStructure.h  Base.h  BaseComponent.h  Camera.cpp  Camera.h  CameraComponent.cpp  CameraComponent.h  Mesh.h  MeshComponent.h  ModelComponent.h  Sphere.h  SphereComponent.h  Update.h
Renderer/src/Common/Scene/Systems/: CameraSystem.cpp  CameraSystem.h  IntersectionSystem.cpp  IntersectionSystem.h  LightHelpers.h  RealtimeRenderSystem.cpp  RealtimeRenderSystem.h
Renderer/src/Editor/: Editor.cpp  Editor.h  ImguiWindow.cpp  ImguiWindow.h  ObjectInspector.cpp  ObjectInspector.h  PixelInspector.cpp  PixelInspector.h  RenderPreview.cpp  RenderPreview.h  Renderer.cpp  Renderer.h  SceneHierarchy.cpp  SceneHierarchy.h  SceneViewer.cpp  SceneViewer.h  VulkanLoader.cpp  VulkanLoader.h
Renderer/src/Editor/Shaders/: basic.frag  basic.vert
Renderer/src/Helpers/: CreateInfoUtils.h  HitPoint.cpp  HitPoint.h  MaterialManager.cpp  MaterialManager.h  Primitive.h  Ray.cpp  Ray.h  Sphere.cpp  Sphere.h
Renderer/src/Helpers/CreateInfo/: CameraCreateInfo.cpp  CameraCreateInfo.h  EditorRendererCreateInfo.cpp  EditorRendererCreateInfo.h  ImageCreateInfo.h  MaterialCreateInfo.cpp  MaterialCreateInfo.h  SceneCreateInfo.cpp  SceneCreateInfo.h
Renderer/src/Helpers/Material/: Dielectric.cpp  Dielectric.h  Lambertian.cpp  Lambertian.h  Material.cpp  Material.h  MaterialFactory.cpp  MaterialFactory.h  Metal.cpp  Metal.h
Renderer/src/Helpers/VulkanHelpers/: Buffer.cpp  Buffer.h  CommandList.cpp  CommandList.h  Image.cpp  Image.h  LayoutTracker.cpp  LayoutTracker.h  MemoryAllocator.h  Pipeline.cpp  Pipeline.h  PipelineManager.cpp  PipelineManager.h  RootSignature.cpp  RootSignature.h  SmartHandle.h  SynchronizationObjects.cpp  SynchronizationObjects.h  VulkanHelpers.h
Renderer/src/RayTracing/: PathTracing.cpp  PathTracing.h  Renderer.cpp  Renderer.h  SimpleRayTracing.cpp  SimpleRayTracing.h
Renderer/src/Renderer/: PathTracing.cpp  PathTracing.h  PngDumper.cpp  PngDumper.h  Renderer.cpp  Renderer.h  Window.cpp  Window.h
Renderer/src/Renderer/Utils/: Ray.cpp  Ray.h
Renderer/src/Scene/: Camera.cpp  Camera.h  Scene.cpp  Scene.h  SceneFactory.cpp  SceneFactory.h  SceneParser.cpp  SceneParser.h
Renderer/src/Vulkan/: Buffer.h  CommandList.cpp  CommandList.h  ImGuiImplementation.cpp  ImGuiImplementation.h  Image.cpp  Image.h  LayoutTracker.cpp  LayoutTracker.h  MemoryAllocator.cpp  MemoryTracker.cpp  MemoryTracker.h  Pipeline.cpp  Pipeline.h  Renderer.cpp  Renderer.h  RootSignature.cpp  RootSignature.h  SynchronizationObjects.cpp  SynchronizationObjects.h  VulkanLoader.cpp  VulkanLoader.h
Renderer/src/Vulkan/Shaders/: basic.frag  basic.vert  color.frag  color.vert  outline.vert
Renderer/tests/: BasicTests.cpp  MathTests.cpp  PoolTests.cpp  RaytracingTests.cpp  Threading.cpp  basic_tests.cpp
Scenes/: default.json  default_one_sphere.json  default_without_camera.json  raytracer_test.json
jnrlib/: CMakeLists.txt
jnrlib/include/: Exceptions.h  Singletone.h  ThreadPool.h  Threading.h  TypeHelpers.h  TypeMatching.h  jnrlib.h
jnrlib/src/: ThreadPool.cpp
